--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         <a href="#"><i class='bx bxl-linkedin'></i></a>
       </div>
       <div class="icon-up-div">
-        <a href="/home.html" class="up-icon-link"><i class='bx bx-up-arrow-alt up-icon'></i></a>
+        <a href="/index.html" class="up-icon-link"><i class='bx bx-up-arrow-alt up-icon'></i></a>
       </div>
     </footer>
     <script src="index.js"></script>
