--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- nav bar section design -->
     <nav >
       <!-- class="header" -->
-      <a href="/index.html"><img src="/logo.png" alt="logo" class="logo"></a>
+      <a href="/home.html"><img src="/logo.png" alt="logo" class="logo"></a>
       <i class='bx bx-menu menu-icon' id="menu-icon"></i>
       <i class='bx bx-exit-fullscreen exit-icon' id="exit-icon"></i>
       <ul class="nav-menu">
@@ -99,7 +99,7 @@
         <div class="line"></div>
         <div class="proj-container">
           <div class="proj-box">
-            <img src="/mac.png" alt="Average Down Calculator">
+            <img src="/calc.png" alt="Average Down Calculator">
             <h1>AD Calculator</h1>
             <p>Average Down Calculator is a website where the 
               users can calculate their stock shares, and find out thier average 
@@ -117,7 +117,7 @@
             <img src="/mac.png" alt="Average Down Calculator">
             <h1>CWA Assessment</h1>
             <p>Children With Autism Assessment is a website 
-              where the Professors use it to assess children with autism, without 
+              where you can use it to assess children with autism, without 
               any verbal communication</p>
             <div class="langs">
               <h3>HTML</h3>
@@ -181,7 +181,7 @@
         <a href="#"><i class='bx bxl-linkedin'></i></a>
       </div>
       <div class="icon-up-div">
-        <a href="/index.html" class="up-icon-link"><i class='bx bx-up-arrow-alt up-icon'></i></a>
+        <a href="/home.html" class="up-icon-link"><i class='bx bx-up-arrow-alt up-icon'></i></a>
       </div>
     </footer>
     <script src="index.js"></script>
