--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <title>Portfolio Profile</title>
     <link rel="stylesheet" href="style.css">
-    <!-- <script src="index.js"></script> -->
+    <script src="index.js"></script>
 
     <!-- box icons link -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
