--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
   </head>
   <body>
-    <div class="loader"></div>
+    <!-- <div class="loader"></div> -->
     <!-- nav bar section design -->
     <nav >
       <!-- class="header" -->
@@ -182,6 +182,6 @@
         <a href="/index.html" class="up-icon-link"><i class='bx bx-up-arrow-alt up-icon'></i></a>
       </div>
     </footer>
-    <script src="index.js"></script>
+    <!-- <script src="index.js"></script> -->
   </body>
 </html>
