--- a/index.html
+++ b/index.html
@@ -180,6 +180,6 @@
         <a href="/index.html" class="up-icon-link"><i class='bx bx-up-arrow-alt up-icon'></i></a>
       </div>
     </footer>
-    <script src="index.js><script>
+    <script src="index.js></script>
   </body>
 </html>
