--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <!-- nav bar section design -->
     <nav >
-      <a href="/home.html"><img src="/logo.png" alt="logo" class="logo"></a>
+      <a href="/index.html"><img src="/logo.png" alt="logo" class="logo"></a>
       <i class='bx bx-menu menu-icon' id="menu-icon"></i>
       <i class='bx bx-exit-fullscreen exit-icon' id="exit-icon"></i>
       <ul class="nav-menu">
