--- a/index.html
+++ b/index.html
@@ -7,15 +7,19 @@
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <title>Portfolio Profile</title>
     <link rel="stylesheet" href="style.css">
+    <!-- <script src="index.js"></script> -->
 
     <!-- box icons link -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
   </head>
   <body>
+    <div class="loader"></div>
+
     <!-- nav bar section design -->
     <nav >
-      <a href="/index.html"><img src="/logo.png" alt="logo" class="logo"></a>
+      <!-- class="header" -->
+      <a href="/home.html"><img src="/logo.png" alt="logo" class="logo"></a>
       <i class='bx bx-menu menu-icon' id="menu-icon"></i>
       <i class='bx bx-exit-fullscreen exit-icon' id="exit-icon"></i>
       <ul class="nav-menu">
@@ -177,9 +181,9 @@
         <a href="#"><i class='bx bxl-linkedin'></i></a>
       </div>
       <div class="icon-up-div">
-        <a href="/index.html" class="up-icon-link"><i class='bx bx-up-arrow-alt up-icon'></i></a>
+        <a href="/home.html" class="up-icon-link"><i class='bx bx-up-arrow-alt up-icon'></i></a>
       </div>
     </footer>
-    <script src="index.js></script>
+    <script src="index.js"></script>
   </body>
 </html>
