--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           </div>
 
           <div class="contact-col">
-            <div class="php"><i class='bx bx-current-location'></i></div>
+            <div class="php"><i class='bx bxs-map'></i></div>
             <h1>Michigan, USA</h1>
           </div>
         </div>
