--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <main class="home" id="home">
       <div class="main-intro">
         <div class="main-home">
-          <img src="picture.png"  alt="profile piccture">
+          <img src="picture2.png"  alt="profile piccture">
           <h1>Hi, I am Ali Azimi</h1>
           <p class="wmu">A Computer Science Student @ <span>WMU</span></p>
           <p class="intro-bio" id="myIntro">
@@ -47,11 +47,11 @@
             children with autism.
           </p>
         </div>
-        <a href="#" class="download">Download Resume <i class='bx bx-download' ></i></a>
+        <a href="/myResume.pdf" download class="download">Download Resume <i class='bx bxs-download'></i></a>
         <div class="social-media">
           <a href="#"><i class='bx bxl-facebook'></i></a>
           <a href="#"><i class='bx bxl-twitter' ></i></a>
-          <a href="#"><i class='bx bxl-github'></i></a>
+          <a href="https://github.com/aliazim1"><i class='bx bxl-github'></i></a>
           <a href="#"><i class='bx bxl-linkedin'></i></a>
         </div>
     
@@ -146,7 +146,7 @@
 
           <div class="contact-col">
             <div class="php"><i class='bx bxs-map'></i></div>
-            <h1>Michigan, USA</h1>
+            <h1>Kalamazoo MI, USA</h1>
           </div>
         </div>
 
@@ -173,9 +173,9 @@
     <!-- footer section design -->
     <footer class="footer">
       <div class="footer-social-media">
-        <a href="#"><i class='bx bxl-facebook'></i></a>
+        <a href="ali.azimi.144181"><i class='bx bxl-facebook'></i></a>
         <a href="#"><i class='bx bxl-twitter' ></i></a>
-        <a href="#"><i class='bx bxl-github'></i></a>
+        <a href="https://github.com/aliazim1"><i class='bx bxl-github'></i></a>
         <a href="#"><i class='bx bxl-linkedin'></i></a>
       </div>
     </footer>
