--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     </form>
                 </div>
                 <!-- Parameters -->
-                <div id="parameters" class="col-sm-4">
+                <div class="col-sm-4" id="parameters">
                     <h2>Assessment Parameters</h2>
                     <label>Time to Selection (seconds):</label> <!-- 1st Parameter (number range) -->
                     <input type="number" min="3" max="90" name="time-to-selection" size="13" value="15" form="start-assessment"/>
