--- a/results.html
+++ b/results.html
@@ -89,12 +89,12 @@
             <!-- Restart the test from the beginning. -->
             <!-- <a href="index.html"> -->
                 <!-- added bootstrap btn styling -->
-                <!-- <button id="btn-size" class="b-main btn btn-primary" type="button">Main Page <i class='fa fa-refresh'></i></button>
+                <!-- <button id="btn-size" class="b-main btn btn-primary" type="button">Main Page <i class='fa fa-refresh' id="dnld"></i></button>
             </a> -->
     
             <!-- Download the graph as a PNG. -->
             <!-- added bootstrap btn styling -->
-            <!-- <button id="btn-size" class="btn btn-success" onclick="downloadChart()"> Download PNG <i class="fa fa-download"></i></button>
+            <!-- <button id="btn-size" class="btn btn-success" onclick="downloadChart()"> Download PNG <i class="fa fa-download" id="dnld"></i></button>
         </div>
     </section> -->
     
