--- a/results.html
+++ b/results.html
@@ -94,7 +94,7 @@
     
             <!-- Download the graph as a PNG. -->
             <!-- added bootstrap btn styling -->
-            <!-- <button id="btn-size" class="btn btn-success" onclick="downloadChart()"> Download PNG <i class="fa fa-download" id="dnld"></i></button>
+            <!-- <button id="btn-size" class="btn btn-success" onclick="downloadChart()"> Download PNG <i class='fa fa-refresh' id="dnld"></i></button>
         </div>
     </section> -->
     
