--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
       <a href="/index.html"><img src="/images/logo.png" alt="logo" class="logo"></a>
       <i class='bx bx-menu menu-icon' id="menu-icon"></i>
       <ul class="nav-menu">
-        <a href="#home"><li onclick="mainVisible()"  id="about" class="nav-link">About</li></a>
-        <a href="#home"><li onclick="projectVisible()" id="proj" class="nav-link">Projects</li></a>
-        <a href="#home"><li onclick="contactVisible()"  id="cont" class="nav-link">Contact</li></a>
+        <li onclick="mainVisible()"  id="about" class="nav-link">About</li>
+        <li onclick="projectVisible()" id="proj" class="nav-link">Projects</li>
+        <li onclick="contactVisible()"  id="cont" class="nav-link">Contact</li>
       </ul>
     </nav>
 
@@ -40,7 +40,7 @@
             I am currently an Undergraduate student working towards my bachelor degree in 
             computer science at Western Michigan University.
             My interests include software design and development, artificial intelligence, 
-            and machine learning. Throughout my studies, I have been learning a little about multiple 
+            and machine learning. Throughout my studies, I have been learnin about multiple 
             disciplines to get a feel for what sparks my interest the most.
           </p>
         </div>
@@ -151,22 +151,22 @@
           <div class="row data-col">
             <div  class="input-col">
               <div class="inputBox">
-                <input type="text" class="data" id="name" required>
+                <input type="text" class="data" id="name" placeholder="John" required>
                 <label>First Name</label>
               </div>
               <div class="inputBox">
-                <input type="text" class="data" id="lname" required>
+                <input type="text" class="data" id="lname" placeholder="Smith" required>
                 <label>Last Name</label>
               </div>
               <div class="inputBox">
-                <input type="email" class="data" id="email" required>
+                <input type="email" class="data" id="email" placeholder="your email" required>
                 <label>Email Address</label>
               </div>
             </div>
             <div class="input-col">
               <div class="inputBox">
-                <textarea type="text" class="txt-area" id="textArea" required></textarea>
-                <label>Type a Message</label>
+                <textarea type="text" class="txt-area" placeholder="type here . . . " id="textArea" required></textarea>
+                <label>Your Message</label>
               </div>
             </div>
           </div>
