--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             disciplines to get a feel for what sparks my interest the most.
           </p>
         </div>
-        <a href="/files/myResume.pdf" download class="download">Download Resume <i class='bx bxs-download'></i></a>
+        <a href="/files/myResume.pdf" download="myResume.pdf" class="download">Download Resume <i class='bx bxs-download'></i></a>
         <div class="social-media">
           <a href="#"><i class='bx bxl-facebook'></i></a>
           <a href="#"><i class='bx bxl-twitter' ></i></a>
@@ -151,15 +151,15 @@
           <div class="row data-col">
             <div  class="input-col">
               <div class="inputBox">
-                <input type="text" class="data" id="name" placeholder="John" required>
+                <input type="text" class="data" id="name" required>
                 <label>First Name</label>
               </div>
               <div class="inputBox">
-                <input type="text" class="data" id="lname" placeholder="Smith" required>
+                <input type="text" class="data" id="lname" required>
                 <label>Last Name</label>
               </div>
               <div class="inputBox">
-                <input type="email" class="data" id="email" placeholder="your email" required>
+                <input type="email" class="data" id="email" required>
                 <label>Email Address</label>
               </div>
             </div>
