--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             disciplines to get a feel for what sparks my interest the most.
           </p>
         </div>
-        <a href="/files/myResume.pdf" download="myResume.pdf" class="download">Download Resume <i class='bx bxs-download'></i></a>
+        <a href="https://docs.google.com/document/d/1gyYNfrfjlUYntts5m7oHkbu_rYs0FXKBpuMcRyK1LoE/edit?usp=share_link" download class="download">Download Resume <i class='bx bxs-download'></i></a>
         <div class="social-media">
           <a href="#"><i class='bx bxl-facebook'></i></a>
           <a href="#"><i class='bx bxl-twitter' ></i></a>
