--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             disciplines to get a feel for what sparks my interest the most.
           </p>
         </div>
-        <a href="myResume.pdf" download class="download">Download Resume <i class='bx bxs-download'></i></a>
+        <a href="https://drive.google.com/uc?export=download&id=1plvPOtG3IB5VEYk4G2RhnBWEFfxNs0rL" download class="download">Download Resume <i class='bx bxs-download'></i></a>
         <div class="social-media">
           <a href="#"><i class='bx bxl-facebook'></i></a>
           <a href="#"><i class='bx bxl-twitter' ></i></a>
