--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <a href="/index.html"><img src="/images/logo.png" alt="logo" class="logo"></a>
       <i class='bx bx-menu menu-icon' id="menu-icon"></i>
       <ul class="nav-menu">
-        <li onclick="mainVisible()"  id="about" class="nav-link">About</li>
+        <li onclick="mainVisible()"  id="about" class="nav-link about-link">About</li>
         <li onclick="projectVisible()" id="proj" class="nav-link">Projects</li>
         <li onclick="contactVisible()"  id="cont" class="nav-link">Contact</li>
       </ul>
@@ -44,7 +44,8 @@
             disciplines to get a feel for what sparks my interest the most.
           </p>
         </div>
-        <a href="https://drive.google.com/uc?export=download&id=1plvPOtG3IB5VEYk4G2RhnBWEFfxNs0rL" download class="download">Download Resume <i class='bx bxs-download'></i></a>
+        <a href="/images/myResume.pdf" download class="download">Download Resume <i class='bx bxs-download'></i></a>
+        <!-- <a href="https://drive.google.com/uc?export=download&id=1plvPOtG3IB5VEYk4G2RhnBWEFfxNs0rL" onclick="downloadChart()" class="download">Download Resume <i class='bx bxs-download'></i></a> -->
         <div class="social-media">
           <a href="#"><i class='bx bxl-facebook'></i></a>
           <a href="#"><i class='bx bxl-twitter' ></i></a>
@@ -141,7 +142,7 @@
           </div>
 
           <div class="contact-col">
-            <div class="php"><i class='bx bxs-map'></i></div>
+            <div class="js"><i class='bx bxs-map'></i></div>
             <h1>Kalamazoo MI, USA</h1>
           </div>
         </div>
