--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             disciplines to get a feel for what sparks my interest the most.
           </p>
         </div>
-        <a href="/images/myResume.pdf" download class="download">Download Resume <i class='bx bxs-download'></i></a>
-        <!-- <a href="https://drive.google.com/uc?export=download&id=1plvPOtG3IB5VEYk4G2RhnBWEFfxNs0rL" onclick="downloadChart()" class="download">Download Resume <i class='bx bxs-download'></i></a> -->
+        <button onclick="downloadResume()" class="download">Download Resume <i class='bx bxs-download'></i></button>
+        <!-- <a href="https://drive.google.com/file/d/1SY0JTrUqt-gGywceIh3LVi1IO0RcP4Wb/view?usp=share_link" class="download">Download Resume <i class='bx bxs-download'></i></a> -->
         <div class="social-media">
           <a href="#"><i class='bx bxl-facebook'></i></a>
           <a href="#"><i class='bx bxl-twitter' ></i></a>
