--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             disciplines to get a feel for what sparks my interest the most.
           </p>
         </div>
-        <button onclick="downloadResume()" class="download">Download Resume <i class='bx bxs-download'></i></button>
+        <button id="downloadResume" class="download">Download Resume <i class='bx bxs-download'></i></button>
         <!-- <a href="https://drive.google.com/file/d/1SY0JTrUqt-gGywceIh3LVi1IO0RcP4Wb/view?usp=share_link" class="download">Download Resume <i class='bx bxs-download'></i></a> -->
         <div class="social-media">
           <a href="#"><i class='bx bxl-facebook'></i></a>
