--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             disciplines to get a feel for what sparks my interest the most.
           </p>
         </div>
-        <a href="https://drive.google.com/file/d/1SY0JTrUqt-gGywceIh3LVi1IO0RcP4Wb/view?usp=share_link" class="download">My Resume</a>
+        <a href="https://drive.google.com/file/d/1SY0JTrUqt-gGywceIh3LVi1IO0RcP4Wb/view?usp=share_link" class="download">See My Resume</a>
         <div class="social-media">
           <a href="#"><i class='bx bxl-facebook'></i></a>
           <a href="#"><i class='bx bxl-twitter' ></i></a>
