--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
           <h1>Hi, I am Ali Azimi</h1>
           <p class="wmu">A Computer Science Student @ <span>WMU</span></p>
           <p class="intro-bio" id="myIntro">
-            I am currently an Undergraduate student working towards my bachelor degree in 
+            I am currently an Undergraduate student working towards my bachelor's degree in 
             computer science at Western Michigan University.
             My interests include software design and development, artificial intelligence, 
-            and machine learning. Throughout my studies, I have been learnin about multiple 
+            and machine learning. Throughout my studies, I have been learning about multiple 
             disciplines to get a feel for what sparks my interest the most.
           </p>
         </div>
