--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <a href="/index.html"><img src="/images/logo.png" alt="logo" class="logo"></a>
       <i class='bx bx-menu menu-icon' id="menu-icon"></i>
       <ul class="nav-menu">
+        <i class='bx bx-x exit-icon' id="exit-icon" ></i>
         <li onclick="mainVisible()"  id="about" class="nav-link about-link">About</li>
         <li onclick="projectVisible()" id="proj" class="nav-link">Projects</li>
         <li onclick="contactVisible()"  id="cont" class="nav-link">Contact</li>
@@ -57,31 +58,35 @@
           <h1 class="heading">Skills & Languages</h1>
             <div class="row">
               <div class="col">
-                <div class="python"><i class='bx bxl-python'></i></div>
+                <div class="skill"><i class='bx bxl-python'></i></div>
                 <h1>Python</h1>
               </div>
 
               <div class="col">
-                <div class="python"><i class='bx bx-laptop' ></i></div>
+                <div class="skill"><i class='bx bx-laptop' ></i></div>
                 <h1>HTML</h1>
               </div>
 
               <div class="col">
-                <div class="python"><i class='bx bx-laptop' ></i></div>
+                <div class="skill"><i class='bx bx-laptop' ></i></div>
                 <h1>CSS</h1>
+              </div>
+              <div class="col">
+                <div class="skill"><i class='bx bxl-bootstrap'></i></div>
+                <h1>Bootstrap</h1>
               </div>
 
               <div class="col">
-                <div class="js"><i class='bx bxl-javascript' ></i></div>
+                <div class="skill"><i class='bx bxl-javascript' ></i></div>
                 <h1>JavaScript</h1>
               </div>
 
               <div class="col">
-                <div class="js"><i class='bx bxl-jquery' ></i></div>
+                <div class="skill"><i class='bx bxl-jquery' ></i></div>
                 <h1>jQuery</h1>
               </div>
               <div class="col">
-                <div class="php"><i class='bx bxl-php'></i></div>
+                <div class="skill"><i class='bx bxl-php'></i></div>
                 <h1>PHP</h1>
               </div>
             </div>
@@ -131,17 +136,17 @@
         <div class="line"></div>
         <div class="row">
           <div class="contact-col">
-            <div class="js"><i class='bx bx-envelope' ></i></div>
+            <div class="c-icon"><i class='bx bx-envelope' ></i></div>
             <h1>ali.azimi@wmich.edu</h1>
           </div>
 
           <div class="contact-col">
-            <div class="js"><i class='bx bx-phone-call'></i></div>
+            <div  class="c-icon"><i class='bx bx-phone-call'></i></div>
             <h1>+1 616-752-9529</h1>
           </div>
 
           <div class="contact-col">
-            <div class="js"><i class='bx bxs-map'></i></div>
+            <div  class="c-icon"><i class='bx bxs-map'></i></div>
             <h1>Kalamazoo MI, USA</h1>
           </div>
         </div>
