--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
               </div>
 
               <div class="col">
-                <div class="skill"><i class='bx bx-laptop' ></i></div>
-                <h1>HTML</h1>
+                <div class="skill"><i class='bx bxl-html5' ></i></div>
+                <h1>HTML5</h1>
               </div>
 
               <div class="col">
-                <div class="skill"><i class='bx bx-laptop' ></i></div>
-                <h1>CSS</h1>
+                <div class="skill"><i class='bx bxl-css3'></i></div>
+                <h1>CSS3</h1>
               </div>
               <div class="col">
                 <div class="skill"><i class='bx bxl-bootstrap'></i></div>
@@ -109,7 +109,6 @@
               <h3>CSS</h3>
               <h3>JavaScript</h3>
               <h3>jQuery</h3>
-              <h3>PHP</h3>
             </div>
           </div>
 
