--- a/index.html
+++ b/index.html
@@ -46,13 +46,7 @@
           </p>
         </div>
         <a href="/images/myResume.pdf" class="download">See My Resume</a>
-        <div class="social-media">
-          <a href="#"><i class='bx bxl-facebook'></i></a>
-          <a href="#"><i class='bx bxl-twitter' ></i></a>
-          <a href="https://github.com/aliazim1"><i class='bx bxl-github'></i></a>
-          <a href="#"><i class='bx bxl-linkedin'></i></a>
-        </div>
-    
+
         <!-- skills section design -->
         <div class="skills" id="skills">
           <h1 class="heading">Skills & Languages</h1>
@@ -186,10 +180,8 @@
     <!-- footer section design -->
     <footer class="footer">
       <div class="footer-social-media">
-        <a href="ali.azimi.144181"><i class='bx bxl-facebook'></i></a>
-        <a href="#"><i class='bx bxl-twitter' ></i></a>
-        <a href="https://github.com/aliazim1"><i class='bx bxl-github'></i></a>
-        <a href="#"><i class='bx bxl-linkedin'></i></a>
+        <a href="https://github.com/aliazim1" target="_blank"><i class='bx bxl-github'></i></a>
+        <a href="https://www.linkedin.com/in/ali-azimi-977a74275/" target="_blank"><i class='bx bxl-linkedin'></i></a>
       </div>
     </footer>
     <script src="index.js"></script>
