--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         <!-- skills section design -->
         <div class="skills" id="skills">
-          <h1 class="heading">Skills & Languages</h1>
+          <h1 class="heading">Languages & Skills</h1>
             <div class="row">
               <div class="col">
                 <div class="skill"><i class='bx bxl-python'></i></div>
