--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
                 <div class="skill"><i class='bx bxl-python'></i></div>
                 <h1>Python</h1>
               </div>
+              
+              <div class="col">
+                <div class="skill"><i class='bx bxl-django'></i></div>
+                <h1>django</h1>
+              </div>
 
               <div class="col">
                 <div class="skill"><i class='bx bxl-html5' ></i></div>
