--- a/index.html
+++ b/index.html
@@ -97,34 +97,38 @@
         <h1 class="heading">Projects</h1>
         <div class="line"></div>
         <div class="proj-container">
-          <div class="proj-box">
-            <img src="/images/calc.png" alt="Average Down Calculator">
-            <h1>AD Calculator</h1>
-            <p>Average Down is a website where the 
-              users can calculate their stock shares, and find out thier average 
-              cost of their stocks.</p>
-            <div class="langs">
-              <h3>HTML</h3>
-              <h3>CSS</h3>
-              <h3>JavaScript</h3>
-              <h3>jQuery</h3>
+           <a href="https://github.com/aliazim1/averageDownCalculator">
+            <div class="proj-box">
+              <img src="/images/calc.png" alt="Average Down Calculator">
+              <h1>AD Calculator</h1>
+              <p>Average Down is a website where the 
+                users can calculate their stock shares, and find out thier average 
+                cost of their stocks.</p>
+              <div class="langs">
+                <h3>HTML</h3>
+                <h3>CSS</h3>
+                <h3>JavaScript</h3>
+                <h3>jQuery</h3>
+              </div>
             </div>
-          </div>
-
-          <div class="proj-box">
-            <img src="/images/mac.png" alt="Average Down Calculator">
-            <h1>CWA Assessment</h1>
-            <p>Children With Autism Assessment is a website 
-              where you can use it to assess children with autism, without 
-              any verbal communication</p>
-            <div class="langs">
-              <h3>HTML</h3>
-              <h3>CSS</h3>
-              <h3>JavaScript</h3>
-              <h3>jQuery</h3>
-              <h3>PHP</h3>
+          </a>
+          
+          <a href="https://github.com/aliazim1/CWA">
+            <div class="proj-box">
+              <img src="/images/mac.png" alt="Average Down Calculator">
+              <h1>CWA Assessment</h1>
+              <p>Children With Autism Assessment is a website 
+                where you can use it to assess children with autism, without 
+                any verbal communication</p>
+              <div class="langs">
+                <h3>HTML</h3>
+                <h3>CSS</h3>
+                <h3>JavaScript</h3>
+                <h3>jQuery</h3>
+                <h3>PHP</h3>
+              </div>
             </div>
-          </div>
+          </a>
         </div>
       </div>
 
